--- a/Lms-Frontend/src/app/student/courses/course2/feedbacks2/feedbacks2.component.html
+++ b/Lms-Frontend/src/app/student/courses/course2/feedbacks2/feedbacks2.component.html
@@ -1,1 +1,61 @@
-<p>feedbacks2 works!</p>
+<div class="backg">
+    <a routerLink="student/stufeedbacks" style="color:black ; text-decoration: none; ">Go Back</a>
+
+
+    <form name="quiz" id="quiz">
+        <h2>Feedback</h2>
+        <div>
+            <p>1.Which activities in the classroom do you enjoy the most</p>
+            <p><input type="radio" name="question1" value="Fast Facts" id="" class="q1">A. Fast Facts</p>
+            <p><input type="radio" name="question1" value="Memory" id="" class="q1">B. Memory</p>
+            <p><input type="radio" name="question1" value="Treasure Hunt" id="" class="q1">C. Treasure Hunt</p>
+            <p><input type="radio" name="question1" value="Other" id="" class="q1">D. Other</p>
+        </div>
+        <div>
+            <p>2.Given a chance, what is one change that you would like to see?</p>
+            <p><input type="radio" name="question2" value="Teaching method" id="" class="q2">A. Teaching method</p>
+            <p><input type="radio" name="question2" value="Time taken to complete a chapter" id="" class="q2">B. Time
+                taken
+                to complete a chapter</p>
+            <p><input type="radio" name="question2" value="Extracurricular activities" id="" class="q2">C.
+                Extracurricular
+                activities</p>
+            <p><input type="radio" name="question2" value="Other" id="" class="q2">D. Other</p>
+        </div>
+        <div>
+            <p>3.Do you have supportive classmates?</p>
+            <p><input type="radio" name="question3" value="Yes, extremely supportive" id="" class="q3">A. Yes, extremely
+                supportive</p>
+            <p><input type="radio" name="question3" value="They are neither supportive nor unsupportive" id=""
+                    class="q3">B.
+                They are neither supportive nor
+                unsupportive</p>
+            <p><input type="radio" name="question3" value="No, extremely unsupportive" id="" class="q3">C. No, extremely
+                unsupportive</p>
+
+        </div>
+        <div>
+            <p>4.What motivates you to learn more?</p>
+            <p><input type="radio" name="question4" value="Asking a lot of questions to the teacher" id="" class="q4">A.
+                Asking a lot of questions to the
+                teacher</p>
+            <p><input type="radio" name="question4" value="Completing various assignments" id="" class="q4">B.
+                Completing
+                various assignments
+            </p>
+            <p><input type="radio" name="question4" value="Sports and other extracurricular activities" id=""
+                    class="q4">C.
+                Sports and other extracurricular
+                activities</p>
+            <p><input type="radio" name="question4" value="Other" id="" class="q4">D. Other</p>
+        </div>
+        <div>
+            <p>5.Do you think that the school provides you with adequate sports facilities?p>
+            <p><input type="radio" name="question5" value="Yes" id="" class="q5">A. Yes</p>
+            <p><input type="radio" name="question5" value="No" id="" class="q5">B. No</p>
+            <p><input type="radio" name="question5" value="Not Always" id="" class="q5">C. Not always</p>
+
+        </div>
+        <input type="button" value="Submit" onclick="check()">
+    </form>
+</div>
