--- a/Lms-Frontend/src/app/student/feedback/feedback.component.html
+++ b/Lms-Frontend/src/app/student/feedback/feedback.component.html
@@ -1,5 +1,7 @@
 <div class="backg">
     <a routerLink="/student" style="color:black ; text-decoration: none; ">Go Back</a>
-    <h3><a routerLink="/student/stufeedbacks/feedback-1" style="color:black; text-decoration:none;">Feedback-1</a></h3>
-    <h3><a routerLink="/student/stufeedbacks/feedback-2" style="color:black; text-decoration:none;">Feedback-2</a></h3>
+    <h3><a routerLink="/student/courses/course1/feedback1" style="color:black; text-decoration:none;">Feedback-1</a>
+    </h3>
+    <h3><a routerLink="/student/courses/course2/feedback2" style="color:black; text-decoration:none;">Feedback-2</a>
+    </h3>
 </div>
