--- a/Lms-Frontend/src/app/student/courses/course4/feedbacks4/feedbacks4.component.html
+++ b/Lms-Frontend/src/app/student/courses/course4/feedbacks4/feedbacks4.component.html
@@ -1,5 +1,5 @@
 <div class="backg">
-    <a routerLink="student/stufeedbacks" style="color:black ; text-decoration: none; ">Go Back</a>
+    <a routerLink="../" style="color:black ; text-decoration: none; ">Go Back</a>
 
 
     <form name="quiz" id="quiz">
