--- a/Lms-Frontend/src/app/student/courses/course1/exams1/exams1.component.html
+++ b/Lms-Frontend/src/app/student/courses/course1/exams1/exams1.component.html
@@ -1,1 +1,32 @@
-<p>exams1 works!</p>
+<h1>Exam Details</h1>
+<br>
+<br>
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">List</th>
+        <th scope="col">Exam Title</th>
+        <th scope="col">Exam Link</th>
+        
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Angular</td>
+        <td><a routerLink='/student/exam/welcome'>Link</a></td>
+        
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Javascript</td>
+        <td></td>
+        
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td colspan="2"></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
