--- a/Lms-Frontend/src/app/trainer/trainerlearningmaterials/trainerlearningmaterials.component.html
+++ b/Lms-Frontend/src/app/trainer/trainerlearningmaterials/trainerlearningmaterials.component.html
@@ -1,24 +1,4 @@
-<!-- <h1 class="learnhead">LEARNING MATERIAL</h1>
-<br>
-<br>
-<div class="alert alert-danger" role="alert">
-  <a class="card__link" routerLink="/trainer/materiallist"><h2>Material List</h2><i class="fas fa-arrow-right"></i></a>
- </div> -->
-<!-- <div class="alert alert-danger" role="alert">
-    <a class="card__link" routerLink="/trainer/htmlcssvideos"><h2>HTML/CSS</h2><i class="fas fa-arrow-right"></i></a>
-   </div>
- <div class="alert alert-warning" role="alert">
-   <a class="card__link" routerLink="/trainer/jsvideos"><h2>Javascript</h2><i class="fas fa-arrow-right"></i></a>
-  </div>
-  <div class="alert alert-success" role="alert">
-   <a class="card__link" routerLink="/trainer/angvideo"><h2>Angular</h2><i class="fas fa-arrow-right"></i></a>
-  </div>
-  <div class="alert alert-primary " role="alert">
-    <a class="card__link" routerLink="/trainer/angvideo"><h2>Angular</h2><i class="fas fa-arrow-right"></i></a>
-   </div>
- 
-
-   -->
+   <!-- fsd -->
    <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,10 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page">learning materials</a>
+            <a class="nav-link active" aria-current="page">Material</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/trainer/materiallist">ADD LEARNING MATERIALS</a>
+            <a class="nav-link active" aria-current="page" routerLink="/trainer/materiallist">Add Material</a>
           </li>
          </ul>
         </div>
@@ -52,11 +32,6 @@
                        <th>URL</th>
                        <th>Material</th>
                        <th>Description</th>
-                       <td></td>
-                       <td></td>
-                       <td></td>
-                       <td></td>
-                       <td></td>
                    </tr>
                </thead>
                <tbody>
