Revert "Merge branch 'master' of https://github.com/sruthigopi/LMS"
This reverts commit a044070fe234f1db7715f5ea335641f2a60bc24a, reversing
changes made to 8ff31f798fda916e14c498c731c97d716ff33a03.

--- a/Lms-Frontend/src/app/student/courses/course4/lrngmaterials4/lrngmaterials4.component.html
+++ b/Lms-Frontend/src/app/student/courses/course4/lrngmaterials4/lrngmaterials4.component.html
@@ -1,37 +1,1 @@
-<h1>LEARNING MATERIAL</h1>
- <!-- get learning materials -->
- 
-
-
- <div class="card">
-   <div class="card-body">
-       <div class="table-responsive table-bordered">
-           <table class="table table-hover">
-               <thead>
-                   <tr class="table-danger" >
-                      
-                       <th>TITLE</th>
-                       <th>URL</th>
-                       <th>Material</th>
-                       <th>Description</th>
-                       
-                       
-                   </tr>
-               </thead>
-               <tbody>
-                <tr *ngFor="let material of materials">
-                    <td>{{material.title}}</td>
-                    <td><a href="{{material.url}}">{{material.url}}</a> </td>
-                   
-                    <td><a href="../../../../../assets/uploads/{{material.file}}"> {{material.file}}</a></td>
-                    <td>{{material.desc}}</td>
-                     </tr>   
-                      
-                
-               </tbody>
-            </table>
-            </div>  
-   </div>
-</div>
-
-
+<p>lrngmaterials4 works!</p>
