--- a/Lms-Frontend/src/app/trainer/trainerhome/trainerhome.component.html
+++ b/Lms-Frontend/src/app/trainer/trainerhome/trainerhome.component.html
@@ -13,7 +13,7 @@
     <p class="card__exit"><i class="fas fa-times"></i></p>
     <!-- <h2 class="card__title">Exams</h2> -->
     <p class="card__apply">
-      <a class="card__link" routerLink="/trainerdsa"><h2 class="headtag">Certified Specialist in Data Science & Analytics</h2> <i class="fas fa-arrow-right"></i></a>
+      <a class="card__link" routerLink="/trainer/fsdcourse"><h2 class="headtag">Certified Specialist in Data Science & Analytics</h2> <i class="fas fa-arrow-right"></i></a>
     </p>
   </div>
   <div class="card card-2 mt-5 ">
@@ -21,10 +21,17 @@
     <p class="card__exit"><i class="fas fa-times"></i></p>
     <!-- <h2 class="card__title">Exams</h2> -->
     <p class="card__apply">
-      <a class="card__link" routerLink="/trainercsa"><h2 class="headtag">Certified Specialist in Cyber Security Analyst</h2> <i class="fas fa-arrow-right"></i></a>
+      <a class="card__link" routerLink="/trainer/fsdcourse"><h2 class="headtag">Certified Specialist in Cyber Security Analyst</h2> <i class="fas fa-arrow-right"></i></a>
     </p>
   </div>
- 
+  <div class="card card-2 mt-5 ">
+    <div class="card__icon"><i class="fas fa-bolt"></i></div>
+    <p class="card__exit"><i class="fas fa-times"></i></p>
+    <!-- <h2 class="card__title">Exams</h2> -->
+    <p class="card__apply">
+      <a class="card__link float:right" routerLink="/trainer/fsdcourse"><h2 class="headtag">Certified Specialist in Software Testing</h2> <i class="fas fa-arrow-right"></i></a>
+    </p>
+  </div>
 
 
 
