--- a/Lms-Frontend/src/app/student/courses/course1/exams1/exams1.component.html
+++ b/Lms-Frontend/src/app/student/courses/course1/exams1/exams1.component.html
@@ -13,20 +13,20 @@
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Angular</td>
-        <td><a routerLink='/student/exam/welcome'>Link</a></td>
+        <td>HTML/CSS</td>
+        <td><a routerLink='/student/exam/welcome1'>Exam Link</a></td>
         
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>Javascript</td>
-        <td></td>
+        <td><a routerLink='/student/exam/welcome2'>Exam Link</a></td>
         
       </tr>
       <tr>
         <th scope="row">3</th>
-        <td colspan="2"></td>
-        <td></td>
+        <td>Angular</td>
+        <td><a routerLink='/student/exam/welcome'>Exam Link</a></td>
       </tr>
     </tbody>
   </table>
