--- a/Lms-Frontend/src/app/student/courses/course3/course3.component.html
+++ b/Lms-Frontend/src/app/student/courses/course3/course3.component.html
@@ -22,5 +22,5 @@
     </div>
 </nav>
 <div class="backg">
-    <h2 style="color: white;">Certified Specialist in Full Stack Development</h2>
+    <h2 style="color: white;">Certified Specialist in Data Science and Analytics</h2>
 </div>
