--- a/Lms-Frontend/src/app/student/courses/course1/welcome2/welcome2.component.html
+++ b/Lms-Frontend/src/app/student/courses/course1/welcome2/welcome2.component.html
@@ -1,7 +1,7 @@
 <br>
 <br>
 <div class="container bg-light py-5">
-    <h1 class="display-5 fw-bold">Welcome to Angular Exam</h1>
+    <h1 class="display-5 fw-bold">Welcome to Javascript Exam</h1>
     <p class="col-md-8 fs-4">This test will consist total of 10 questions.Each question holds 1 points</p>
     <h4>
         Rules:
@@ -21,6 +21,7 @@
 
             
         </div>
-       <button class="btn btn-primary btn-lg" routerLink="/student/exam/question" (click)="startQuiz()">Start</button>
+       <button class="btn btn-primary btn-lg" routerLink="/student/exam/question2" (click)="startQuiz()">Start</button>
    
 </div>
+
