--- a/Lms-Frontend/src/app/student/student/student.component.css
+++ b/Lms-Frontend/src/app/student/student/student.component.css
@@ -1,3 +1,7 @@
+.navbar-brand, .nav-link{
+  color: white;
+}
+
 .backg{
     background-image: url('../../../assets/images/priscilla-du-preez-XkKCui44iM0-unsplash.jpg');
     background-size: cover;
