--- a/Lms-Frontend/src/app/home/home.component.html
+++ b/Lms-Frontend/src/app/home/home.component.html
@@ -53,8 +53,8 @@
 
         <div class="col-md-6">
           <h1 class="header-info">Build your Career with us</h1>
-          <button class="btn btn-dark btn-lg btn-space" style='margin-right:16px' routerLink="/courses"> Explore</button>
-          <button class="btn btn-dark btn-lg btn-space" style='margin-right:16px' routerLink="/stureg"> Register</button>
+          <button class="btn btn-dark btn-lg btn-space" style='margin-right:16px'> Explore</button>
+          <button class="btn btn-dark btn-lg btn-space" style='margin-right:16px'> Register</button>
         </div>
 
         <div class="col-md-6 text-center">
@@ -177,7 +177,7 @@
         <div class="col-md-4">
           <div class="card">
             <div class="card-body text-center">
-              <h2 class="card-title text-muted">Certified Specialist in Cyber Security</h2>
+              <h2 class="card-title text-muted">RPA Developer Certification</h2>
               <h1 class="card-title pricing-text"><i class="fas fa-rupee-sign"></i>18000</h1>
               <p class="card-text">Salary Upto 8LPA</p>
               <p class="card-text">60+ Placed</p>
