--- a/Lms-Frontend/src/app/home/home.component.html
+++ b/Lms-Frontend/src/app/home/home.component.html
@@ -177,7 +177,7 @@
         <div class="col-md-4">
           <div class="card">
             <div class="card-body text-center">
-              <h2 class="card-title text-muted">RPA Developer Certification</h2>
+              <h2 class="card-title text-muted">Certified Specialist in Cyber Security</h2>
               <h1 class="card-title pricing-text"><i class="fas fa-rupee-sign"></i>18000</h1>
               <p class="card-text">Salary Upto 8LPA</p>
               <p class="card-text">60+ Placed</p>
