--- a/Lms-Frontend/src/app/student/student/student.component.html
+++ b/Lms-Frontend/src/app/student/student/student.component.html
@@ -10,7 +10,7 @@
           
          </ul>
         <form class="d-flex" role="search">
-          <button class="btn btn-outline-success"  type="submit" >Signout</button>
+          <button class="btn btn-outline-success"(click)="logoutStudent()" type="submit" >Signout</button>
         </form>
       </div>
     </div>
