--- a/Lms-Frontend/src/app/trainer/trainerhome/trainerhome.component.css
+++ b/Lms-Frontend/src/app/trainer/trainerhome/trainerhome.component.css
@@ -1,8 +1,11 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+  } */
+  .navbar-brand, .nav-link{
+    color: white;
+}
   .cards {
     display: flex;
     flex-wrap: wrap;
