courses  h2 styling change

--- a/Lms-Frontend/src/app/student/courses/course3/course3.component.css
+++ b/Lms-Frontend/src/app/student/courses/course3/course3.component.css
@@ -1,5 +1,5 @@
 .backg{
-    background-image: url('../../../../assets/images/fsd2.png');
+    background-image: url('../../../../assets/images/carlos-muza-hpjSkU2UYSU-unsplash.jpg');
     background-size: cover;
     height: 760px;
    
