--- a/Lms-Frontend/src/app/student/courses/course1/course1.component.css
+++ b/Lms-Frontend/src/app/student/courses/course1/course1.component.css
@@ -1,5 +1,5 @@
 .backg{
-    background-image: url('../../../../assets/images/carlos-muza-hpjSkU2UYSU-unsplash.jpg');
+    background-image: url('../../../../assets/images/fsd2.png');
     background-size: cover;
     height: 768px;
 }
