--- a/Lms-Frontend/src/app/student/courses/course1/course1.component.html
+++ b/Lms-Frontend/src/app/student/courses/course1/course1.component.html
@@ -23,5 +23,5 @@
     </div>
 </nav>
 <div class="backg">
-    <h2>Certified Specialist in Full Stack Development</h2>
+    <h2 style="color: white;">Certified Specialist in Full Stack Development</h2>
 </div>
