--- a/Lms-Frontend/src/app/trainer/trainerexams/trainerexams.component.html
+++ b/Lms-Frontend/src/app/trainer/trainerexams/trainerexams.component.html
@@ -1,2 +1,24 @@
 
-hi
+ <table class="table">
+    <thead>
+      <tr>
+        <!-- <th scope="col">Name</th>
+        <th scope="col">Course</th> -->
+        <th scope="col">Total Question Attempted</th>
+        <th scope="col">Total Correct Answered</th>
+        <th scope="col">Total Wrong Answered</th>
+        <th scope="col">Your score</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr>
+          <!-- <th scope="row">{{name}}</th>
+          <th>{{course}}</th> -->
+         <th>{{questionList.length}}</th>
+          <td>{{correctAnswer}}</td>
+          <td>{{incorrectAnswer}}</td>
+          <td>{{points}}</td>
+        </tr>
+        
+      </tbody>
+    </table>
