--- a/Lms-Frontend/src/app/student/courses/course1/question/question.component.html
+++ b/Lms-Frontend/src/app/student/courses/course1/question/question.component.html
@@ -60,6 +60,8 @@
                         <table class="table">
                             <thead>
                               <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col">Course</th>
                                 <th scope="col">Total Question Attempted</th>
                                 <th scope="col">Total Correct Answered</th>
                                 <th scope="col">Total Wrong Answered</th>
@@ -68,7 +70,9 @@
                             </thead>
                             <tbody>
                               <tr>
-                                <th scope="row">{{questionList.length}}</th>
+                                <th scope="row">{{name}}</th>
+                                <th>{{course}}</th>
+                               <th>{{questionList.length}}</th>
                                 <td>{{correctAnswer}}</td>
                                 <td>{{incorrectAnswer}}</td>
                                 <td>{{points}}</td>
@@ -76,7 +80,7 @@
                               
                             </tbody>
                           </table>
-                       <button>Submit</button>
+                       <button (click)="onTransfer()">Submit</button> 
                         
                     </div>
                 </div>
