--- a/Lms-Frontend/src/app/student/courses/course1/exams1/exams1.component.html
+++ b/Lms-Frontend/src/app/student/courses/course1/exams1/exams1.component.html
@@ -1,29 +1,29 @@
-<h1>Exam Details</h1>
+<h1 class="head-tag">Exam Details</h1>
 <br>
 <br>
 <table class="table">
     <thead>
-      <tr>
-        <th scope="col">List</th>
-        <th scope="col">Exam Title</th>
-        <th scope="col">Exam Link</th>
+      <tr class="row-class">
+        <th scope="col"><h2>List</h2></th>
+        <th scope="col"><h2>Exam Title</h2></th>
+        <th scope="col"><h2> Link</h2></th>
         
       </tr>
     </thead>
     <tbody>
-      <tr>
+      <tr class="row2-tag">
         <th scope="row">1</th>
         <td>HTML/CSS</td>
         <td><a routerLink='/student/exam/welcome1'>Exam Link</a></td>
         
       </tr>
-      <tr>
+      <tr class="row2-tag">
         <th scope="row">2</th>
         <td>Javascript</td>
         <td><a routerLink='/student/exam/welcome2'>Exam Link</a></td>
         
       </tr>
-      <tr>
+      <tr class="row2-tag">
         <th scope="row">3</th>
         <td>Angular</td>
         <td><a routerLink='/student/exam/welcome'>Exam Link</a></td>
