authentication trainer and student

--- a/Lms-Frontend/src/app/admin/adm-nav/adm-nav.component.html
+++ b/Lms-Frontend/src/app/admin/adm-nav/adm-nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark">
+<nav class="navbar navbar-expand-lg bg-primary">
     <div class="container-fluid">
       <a class="navbar-brand">LMS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,9 +6,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <!-- <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/admhome" *ngIf="authService.getTokenAdmin()">Admin</a>
-          </li> -->
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/admfsd" *ngIf="authService.getTokenAdmin()">Admin Dashboard</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="/admfsd" *ngIf="authService.getTokenAdmin()">Trainers</a>
           </li>
@@ -27,8 +27,8 @@
           
          </ul>
         <form class="d-flex" role="search">
-          <button class="btn btn-outline-success" routerLink="/tralogin" type="submit" *ngIf="!authService.getTokenAdmin()">Login</button>
-          <button class="btn btn-outline-success"  type="submit" (click)="logoutAdmin()" *ngIf="authService.getTokenAdmin()">Signout</button>
+          <button class="btn btn-outline-primary" routerLink="/tralogin" type="submit" *ngIf="!authService.getTokenAdmin()">Login</button>
+          <button class="btn btn-outline-danger"  type="submit" (click)="logoutAdmin()" *ngIf="authService.getTokenAdmin()">Signout</button>
         </form>
       </div>
     </div>
