--- a/Lms-Frontend/src/app/admin/admin-stu-dsa02/admin-stu-dsa02.component.html
+++ b/Lms-Frontend/src/app/admin/admin-stu-dsa02/admin-stu-dsa02.component.html
@@ -3,14 +3,14 @@
 <!-- admin student details in admin -->
 <h1 style="text-align:center;">Enrolled DSA002 Batch Student List</h1>
 
-<div style="margin-top: 50px;" class="col-lg-12 container">
+<div style="margin-top: 50px;" class="col-lg-12 container-fluid">
         <div class="table-responsive table-bordered">
             <table class="table table-hover">
                 <thead style="text-align:center;">
-                    <tr class="table-danger" >
-                        <th>Name</th>
-                        <th>Address</th>
-                        <th>Email</th>
+                    <tr class="table-primary" >
+                        <th style="color: darkblue;">Name</th>
+                        <th >Address</th>
+                        <th >Email</th>
                         <th>Contact Number</th>
                         <th>Qualification</th>
                         <th>Course</th>
