--- a/Lms-Frontend/src/app/admin/admin-stu-fsd02/admin-stu-fsd02.component.html
+++ b/Lms-Frontend/src/app/admin/admin-stu-fsd02/admin-stu-fsd02.component.html
@@ -3,11 +3,11 @@
 <!-- admin student details in admin -->
 <h1 style="text-align:center;">Enrolled FSD002 Batch Student List</h1>
 
-<div style="margin-top: 50px;" class="col-lg-12 container">
+<div style="margin-top: 50px;" class="col-lg-12 container-fluid">
         <div class="table-responsive table-bordered">
             <table class="table table-hover">
                 <thead style="text-align:center;">
-                    <tr class="table-danger" >
+                    <tr class="table-primary" >
                         <th>Name</th>
                         <th>Address</th>
                         <th>Email</th>
