--- a/Lms-Frontend/src/app/admin/admin-tra-fsd/admin-tra-fsd.component.html
+++ b/Lms-Frontend/src/app/admin/admin-tra-fsd/admin-tra-fsd.component.html
@@ -7,7 +7,7 @@
         <div class="table-responsive table-bordered">
             <table class="table table-hover">
                 <thead style="text-align:center;">
-                    <tr class="table-danger" >
+                    <tr class="table-primary" >
                         <th>Name</th>
                         <th>Address</th>
                         <th>Email</th>
