--- a/Lms-Frontend/src/app/home/home.component.html
+++ b/Lms-Frontend/src/app/home/home.component.html
@@ -53,8 +53,8 @@
 
         <div class="col-md-6">
           <h1 class="header-info">Build your Career with us</h1>
-          <button class="btn btn-dark btn-lg btn-space" style='margin-right:16px'> Explore</button>
-          <button class="btn btn-dark btn-lg btn-space" style='margin-right:16px'> Register</button>
+          <button class="btn btn-dark btn-lg btn-space" style='margin-right:16px' routerLink="/courses"> Explore</button>
+          <button class="btn btn-dark btn-lg btn-space" style='margin-right:16px' routerLink="/stureg"> Register</button>
         </div>
 
         <div class="col-md-6 text-center">
