--- a/Lms-Frontend/src/app/student/courses/course4/lrngmaterials4/lrngmaterials4.component.html
+++ b/Lms-Frontend/src/app/student/courses/course4/lrngmaterials4/lrngmaterials4.component.html
@@ -8,7 +8,7 @@
        <div class="table-responsive table-bordered">
            <table class="table table-hover">
                <thead>
-                   <tr class="table-danger" >
+                   <tr class="table-primary" >
                       
                        <th>TITLE</th>
                        <th>URL</th>
