--- a/Lms-Frontend/src/app/student/student/student.component.html
+++ b/Lms-Frontend/src/app/student/student/student.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark">
+<nav class="navbar navbar-expand-lg bg-primary">
     <div class="container-fluid">
       <a class="navbar-brand">LMS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,7 +10,8 @@
           
          </ul>
         <form class="d-flex" role="search">
-          <button class="btn btn-outline-success"(click)="logoutStudent()" type="submit" >Signout</button>
+            <button class="btn btn-outline-warning" routerLink="/stulogin" type="submit" *ngIf="!testService.getTokenStudent()">Login</button>
+          <button class="btn btn-outline-danger"(click)="logoutStudent()" type="submit" *ngIf="testService.getTokenStudent()">Signout</button>
         </form>
       </div>
     </div>
