student button style change 2

--- a/Lms-Frontend/src/app/student/student/student.component.html
+++ b/Lms-Frontend/src/app/student/student/student.component.html
@@ -12,7 +12,7 @@
 
             </ul>
             <form class="d-flex" role="search">
-                <button class="btn btn-outline-warning" routerLink="/stulogin" type="submit"
+                <button class="btn btn-warning" routerLink="/stulogin" type="submit"
                     *ngIf="!testService.getTokenStudent()">Login</button>
                 <button class="btn btn-success" (click)="logoutStudent()" type="submit"
                     *ngIf="testService.getTokenStudent()">Signout</button>
