--- a/Lms-Frontend/src/app/student/courses/course2/exams2/exams2.component.html
+++ b/Lms-Frontend/src/app/student/courses/course2/exams2/exams2.component.html
@@ -1,1 +1,32 @@
-<p>exams2 works!</p>
+<!-- <h1 class="head-tag">Exam Details</h1>
+<br>
+<br>
+<table class="table">
+    <thead>
+      <tr class="row-class">
+        <th scope="col"><h2>List</h2></th>
+        <th scope="col"><h2>Exam Title</h2></th>
+        <th scope="col"><h2> Link</h2></th>
+        
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="row2-tag">
+        <th scope="row">1</th>
+        <td>Data Analysis</td>
+        <td><a routerLink='/student/exam/welcome1ds'>Exam Link</a></td>
+        
+      </tr>
+      <tr class="row2-tag">
+        <th scope="row">2</th>
+        <td>Machine Learning</td>
+        <td><a routerLink='/student/exam/welcome2ds'>Exam Link</a></td>
+        
+      </tr>
+      <tr class="row2-tag">
+        <th scope="row">3</th>
+        <td>Probability and Statistic</td>
+        <td><a routerLink='/student/exam/welcome3ds'>Exam Link</a></td>
+      </tr>
+    </tbody>
+  </table> -->
