--- a/Lms-Frontend/src/app/trainer/trainerexams/trainerexams.component.html
+++ b/Lms-Frontend/src/app/trainer/trainerexams/trainerexams.component.html
@@ -1,13 +1,18 @@
 
+ <br>
+ <br>
+ <br>
+ <h1 class="headtag">EXAM EVALUATION</h1>
  <table class="table">
     <thead>
-      <tr>
+      <tr class="rowtag">
         <!-- <th scope="col">Name</th>
         <th scope="col">Course</th> -->
+        
         <th scope="col">Total Question Attempted</th>
         <th scope="col">Total Correct Answered</th>
         <th scope="col">Total Wrong Answered</th>
-        <th scope="col">Your score</th>
+        <th scope="col">Score</th>
       </tr>
     </thead>
     <tbody>
